feat: update english translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,5 +30,8 @@
   },
   "cards": {
     "featured": "Featured"
+  },
+  "contact": {
+    "description": "Let's get in touch! I'm always eager to chat with you about anything related to my work. Whether you want to ask me something, share your ideas, or hire me for a project, I'm all ears!"
   }
 }
