feat: update french translations

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -29,5 +29,8 @@
   },
   "cards": {
     "featured": "En vedette"
+  },
+  "contact": {
+    "description": "Prenons contact ! Je suis toujours ravie de discuter avec vous de tout ce qui touche à mon travail. Que vous souhaitiez me poser une question, partager vos idées ou m'engager pour un projet, je suis à votre écoute !"
   }
 }
