--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,17 +3,22 @@
     "description": "\"Capturing the essence of people through a lens.\""
   },
   "biography": "An aspiring film maker who was born and raised in Saudi Arabia, but originally Filipino, Adrian is a a filmmaker, photographer and overall artist open and exploring multiple medias of art. Through his immersion and integration into to different cultures he has been able to have a wider perspective of the world and its beauty. Aiming to explore subjects that evoke deep emotions of love and pain in his art.",
+  "home": {
+    "gallery": {
+      "description": "Displaying trending images."
+    }
+  },
   "albums": {
     "description": "Collections of my favorite photos from my travels and adventures.",
     "buttons": {
       "share": {
         "metadata": {
-          "title": "Share"
+          "title": "Share Album"
         }
       },
       "download": {
         "metadata": {
-          "title": "Download"
+          "title": "Download Album"
         }
       }
     }
@@ -23,9 +28,9 @@
       "title": "Musics"
     }
   },
-  "videos": {
+  "films": {
     "metadata": {
-      "title": "Videos"
+      "title": "films"
     }
   },
   "cards": {
