--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -3,17 +3,22 @@
     "description": "\"Capturant l'essence des gens à travers un objectif.\""
   },
   "biography": "Cinéaste en herbe, né et élevé en Arabie saoudite, mais d'origine philippine, Adrian est un cinéaste, un photographe et un artiste en général, ouvert et explorant de multiples médias artistiques. Son immersion et son intégration dans différentes cultures lui ont permis d'avoir une perspective plus large du monde et de sa beauté. Il cherche à explorer des sujets qui évoquent de profondes émotions d'amour et de douleur dans son art.",
+  "home": {
+    "gallery": {
+      "description": "Displaying trending images."
+    }
+  },
   "albums": {
     "description": "Collections de mes photos préférées prises lors de mes voyages et de mes aventures.",
     "buttons": {
       "share": {
         "metadata": {
-          "title": "Partager"
+          "title": "Partager sur"
         }
       },
       "download": {
         "metadata": {
-          "title": "Télécharger"
+          "title": "Télécharger l'album"
         }
       }
     }
@@ -23,9 +28,9 @@
       "title": "Musiques"
     }
   },
-  "videos": {
+  "films": {
     "metadata": {
-      "title": "Vidéos"
+      "title": "Films"
     }
   },
   "cards": {
